Add basic .img-container and img styles

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
 <body>
     <div class="container">
         <div class="img-grid">
+            <div class="img-container">
+                <img id="animated-face-img" src="./animated_face.png" alt="Animated Face">
+                <img id="real-face-img" src="./real_face.png" alt="Real Face">
+            </div>
 
+            <div class="img-options">
+
+            </div>
         </div>
 
         <div class="card">
-            
+
         </div>
     </div>
 </body>
