Add .img-grid styles

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
                 <img id="real-face-img" src="./real_face.png" alt="Real Face">
             </div>
 
-            <div class="img-options">
-
-            </div>
+            <button id="animated-face-btn" type="button">Animated</button>
+            <button id="real-face-btn" type="button">Real</button>
         </div>
 
         <div class="card">
