Add button styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img id="real-face-img" src="./real_face.png" alt="Real Face">
             </div>
 
-            <button id="animated-face-btn" type="button">Animated</button>
+            <button id="animated-face-btn" class="selected" type="button">Animated</button>
             <button id="real-face-btn" type="button">Real</button>
         </div>
 
