Add waving hand

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="img-grid">
             <div class="img-container">
                 <img id="animated-face-img" src="./animated_face.png" alt="Animated Face">
-                <img id="real-face-img" src="./real_face.png" alt="Real Face">
+                <img id="real-face-img" class="hidden-img" src="./real_face.png" alt="Real Face">
             </div>
 
             <button id="animated-face-btn" class="selected" type="button">Animated</button>
@@ -20,7 +20,9 @@
         </div>
 
         <div class="card">
+            <h1>Hi, I'm Maahir Jain <span class="wave">👋</span></h1> 
 
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos fugiat quod sapiente ipsam aliquam molestiae illum autem recusandae pariatur a. Obcaecati natus nihil nam fuga, vel saepe deserunt perferendis? Veritatis non nihil dolorum. Explicabo iste iure sequi est impedit, fugit a culpa id excepturi commodi, omnis asperiores maiores quisquam rerum?</p>
         </div>
     </div>
 </body>
