--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="img-grid">
             <div class="img-container">
                 <img id="animated-face-img" src="./animated_face.png" alt="Animated Face">
-                <img id="real-face-img" class="hidden-img" src="./real_face.png" alt="Real Face">
+                <img id="real-face-img" class="hide" src="./real_face.png" alt="Real Face">
             </div>
 
             <button id="animated-face-btn" class="selected" type="button">Animated</button>
