Add card content and update styles

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         <div class="card">
             <h1>Hi, I'm Maahir Jain <span class="wave">👋</span></h1> 
 
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos fugiat quod sapiente ipsam aliquam molestiae illum autem recusandae pariatur a. Obcaecati natus nihil nam fuga, vel saepe deserunt perferendis? Veritatis non nihil dolorum. Explicabo iste iure sequi est impedit, fugit a culpa id excepturi commodi, omnis asperiores maiores quisquam rerum?</p>
-        </div>
+           <p>I'm a second-year student majoring in computer science at <span class="gt">Georgia Tech</span>.</p>
+
+           <p>Since I began my journey with software creation, I've realized the incredible impact technology can have on people's lives. In high school, I worked on an app which made education more accessible for over a hundred students in underdeveloped regions. Since then, I've developed educational tools like <a href="https://maahirjain.github.io/matrix-viz/" target="_blank" rel="noopener noreferrer">MatrixViz</a>, with the goal of integrating education and technology. I hope to continue the same on a larger scale by refining my technical abilities and connecting with like-minded people.</p>
+
+           <p>To know more about me, check out <a href="https://maahirjain.github.io/" target="_blank" rel="noopener noreferrer">my website</a>.</p>
     </div>
 </body>
 </html>
