--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div class="img-grid">
             <div class="img-container">
-                <img id="animated-face-img" src="./animated_face.png" alt="Animated Face">
-                <img id="real-face-img" class="hide" src="./real_face.png" alt="Real Face">
+                <img id="animated-face-img" src="./animated_face.png" alt="Animated Face" width="216px">
+                <img id="real-face-img" class="hide" src="./real_face.png" alt="Real Face" width="216px">
             </div>
 
             <button id="animated-face-btn" class="selected" type="button">Animated</button>
